--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.4/lodash.min.js"></script>
     <script src="https://cdn.rawgit.com/openexchangerates/accounting.js/master/accounting.min.js"></script>
